tests/semantic/invalid/expected/type_mismatch_assign.txt
semantic error: несоответствие типов - несоответствие типов в присваивании
  --> tests/semantic/invalid/type_mismatch_assign.src:3:5
   |
3 |     x = 3.14;
   |     ^
   |
   = ожидалось: int
   = получено: float
   = подсказка: используйте явное преобразование: (int)значение

